--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,6 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "eslint:recommended",
+  "rules": {
+    "react/no-unescaped-entities": "off"
+  }
 }
