--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,6 @@
   "extends": "eslint:recommended",
   "rules": {
     "react/no-unescaped-entities": "off"
-  }
+  },
+  "parser": "babel-eslint"
 }
